# livedata

./: .gitignore  AGENTS.md  Cargo.toml  JOURNAL_TEST.md  PLAN.md  README.md  guix.scm  test_journal_integration.sh
.beads/: issues.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-process-monitoring-core/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/phases/02-storage-enhancements/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-UAT.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
data/megatron/2026/01/17/: 20260117-0728.parquet
docs/superpowers/plans/: 2026-03-18-four-issues-batch.md
src/: app_controller.rs  config.rs  duckdb_buffer.rs  journal_reader.rs  lib.rs  log_entry.rs  main.rs  parquet_writer.rs  process_monitor.rs  sql_trace.rs  web_server.rs
static/: index.html  processes.html  processes.js
tests/: debug_journal_test.rs  direct_journal_test.rs  graceful_shutdown_duckdb_cli.rs  journal_integration_test.rs  simple_journal_test.rs
